--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
         </div>
         <div class="topbar">
             <div class="search">
-                Search bar
+                
+                <div class="icon"><img src="../UsefulIcons/magnify.svg" alt="icon"></div>
+                <div class = "searchBar"><input type="text"></div>
+                <div class="icon"><img src="../UsefulIcons/bell-ring.svg" alt="icon"></div>
+                <div class="avatar"><img src="../Avatars/panda.png" alt="panda"></div>
+                <div>Keiko Panda</div>
             </div>
             <div class="greeting">
                 Greeting
