--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
                 <div>Keiko Panda</div>
             </div>
             <div class="greeting">
-                Greeting
+                <div class="avatar"><img src="../Avatars/panda.png" alt="panda"></div>
+                <div class="hello">Hi there,</div>
+                <div class = "name">Keiko Panda (@Keiko_Panda)</div>
+                <div class="buttons">
+                    <button class="button">New</button>
+                    <button class="button">Upload</button>
+                    <button class="button">Share</button>
+                </div>
             </div>
         
         
