Add action icons to project cards

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                             adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua.
                         </div>
+                        <div class="actionIcons">
+                            <img src="../UsefulIcons/star-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/eye-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/share-variant.svg" alt="icon">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="subtitle">Less Cool Project</div>
@@ -107,6 +112,11 @@
                             Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut
                             aliquip ex ea commodo consequat.
+                        </div>
+                        <div class="actionIcons">
+                            <img src="../UsefulIcons/star-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/eye-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/share-variant.svg" alt="icon">
                         </div>
                     </div>
                     <div class="project">
@@ -116,6 +126,11 @@
                             in voluptate velit esse cillum dolore eu
                             fugiat nulla pariatur.
                         </div>
+                        <div class="actionIcons">
+                            <img src="../UsefulIcons/star-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/eye-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/share-variant.svg" alt="icon">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="subtitle">Easy Peasy App</div>
@@ -124,17 +139,32 @@
                             proident, sunt in culpa qui officia deserunt
                             mollit anim id est laborum.
                         </div>
+                        <div class="actionIcons">
+                            <img src="../UsefulIcons/star-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/eye-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/share-variant.svg" alt="icon">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="subtitle">Ad Blocker</div>
                         <div class="summary">
                             Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus.
                         </div>
+                        <div class="actionIcons">
+                            <img src="../UsefulIcons/star-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/eye-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/share-variant.svg" alt="icon">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="subtitle">Money Maker</div>
                         <div class="summary">
                             Diam vel quam elementum pulvinar etiam non quam lacus. Suspendisse interdum consectetur libero id faucibus nisl.
+                        </div>
+                        <div class="actionIcons">
+                            <img src="../UsefulIcons/star-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/eye-plus-outline.svg" alt="icon">
+                            <img src="../UsefulIcons/share-variant.svg" alt="icon">
                         </div>
                     </div>
                 </div>
