Add announcements box

--- a/index.html
+++ b/index.html
@@ -171,7 +171,26 @@
             </div>
             <div class="announcementsContainer">
                 <div class="subtitle">Announcements</div>
-                <div class="announcements">Announcements</div>
+                <div class="announcements">
+                    <div class="announcement">
+                        <div class="subtitle">Site Maintenance</div>
+                        <div class="summary">
+                            Diam vel quam elementum pulvinar etiam non quam lacus. Suspendisse interdum consectetur libero id faucibus nisl.
+                        </div>
+                    </div>
+                    <div class="announcement community">
+                        <div class="subtitle">Community Share Day</div>
+                        <div class="summary">
+                            Laoreet non curabitur gravida arcu ac tortor. Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum.
+                        </div>
+                    </div>
+                    <div class="announcement">
+                        <div class="subtitle">Updated Privacy Policy</div>
+                        <div class="summary">
+                            Dignissim convallis aenean et tortor at risus viverra adipiscing. Nulla aliquet enim tortor at auctor urna. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. 
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="trendingContainer">
                 <div class="subtitle">Trending</div>
