Add trending box

--- a/index.html
+++ b/index.html
@@ -194,7 +194,30 @@
             </div>
             <div class="trendingContainer">
                 <div class="subtitle">Trending</div>
-                <div class="trending">Trending</div>
+                <div class="trending">
+                   
+                        <div class="trend">
+                            <div class="avatar"><img src="../Avatars/bear.png" alt="panda"></div>
+                            <div class="name">@Barney_Bear</div>
+                            <div class = "news">Bowling Game</div>
+                        </div>
+                        <div class="trend">
+                            <div class="avatar"><img src="../Avatars/panda.png" alt="panda"></div>
+                            <div class="name">@Keiko_Panda</div>
+                            <div class = "news">Super Cool Project</div>
+                        </div>
+                        <div class="trend">
+                            <div class="avatar"><img src="../Avatars/cat.png" alt="panda"></div>
+                            <div class="name">@Selina_Cat</div>
+                            <div class = "news">Wellbeing App</div>
+                        </div>
+                        <div class="trend">
+                            <div class="avatar"><img src="../Avatars/rabbit.png" alt="panda"></div>
+                            <div class="name">@Ruby_Rabbit</div>
+                            <div class = "news">SatNav App</div>
+                        </div>
+                   
+                </div>
             </div> 
 
         </div>
